fix(Avatar): fallback overflow when avatar has custom size

--- a/packages/frosted-ui/src/components/avatar.css
+++ b/packages/frosted-ui/src/components/avatar.css
@@ -52,6 +52,7 @@
   z-index: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
